# robotic_manipulator_rloa

./: .coverage  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  tests_execution.txt
docs/: index.html  rl_framework.html
docs/naf_components/: naf_algorithm.html  naf_neural_network.html
docs/robotic_manipulator_rloa/environment/: environment.html  index.html
docs/robotic_manipulator_rloa/naf_components/: index.html
docs/robotic_manipulator_rloa/utils/: collision_detector.html  index.html  logger.html  replay_buffer.html
docs/utils/: exceptions.html
robotic_manipulator_rloa/: __init__.py  rl_framework.py
robotic_manipulator_rloa/demo_weights/: weights_xarm6.p
robotic_manipulator_rloa/environment/: environment.py
robotic_manipulator_rloa/naf_components/: naf_algorithm.py  naf_neural_network.py
robotic_manipulator_rloa/naf_components/demo_weights/: weights_kuka.p
robotic_manipulator_rloa/utils/: collision_detector.py  exceptions.py  logger.py  replay_buffer.py
tests/robotic_manipulator_rloa/: test_rl_framework.py
tests/robotic_manipulator_rloa/environment/: test_environment.py
tests/robotic_manipulator_rloa/naf_components/: test_naf_algorithm.py  test_naf_neural_network.py
tests/robotic_manipulator_rloa/utils/: test_collision_detector.py  test_exceptions.py  test_logger.py  test_replay_buffer.py
