[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotic-manipulator-rloa"
version = "1.0.0"
description = "Framework for training Robotic Manipulators on the Obstacle Avoidance task through Reinforcement Learning."
readme = "README.md"
authors = [{ name = "Javier Martinez", email = "jmartinezojeda5upv@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Framework :: Robot Framework"
]
keywords = ["Robotics", "Manipulator", "Framework", "Reinforcement Learning", "Obstacle Avoidance"]
dependencies = [
    "torch",
    "numpy",
    "pybullet",
    "matplotlib"
]
requires-python = ">=3.8"

[tool.setuptools.package-data]
myModule = ["*.p"]

[project.urls]
Homepage = "https://github.com/JavierMtz5/robotic_manipulator_rloa"
Repository = "https://github.com/JavierMtz5/robotic_manipulator_rloa"
Documentation = "https://javiermtz5.github.io/robotic_manipulator_rloa/"